--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <header id="header" style="margin: 12px;">
         <h1>Etch a Sketch</h1>
     </header>
-    <section>
-        <div class="option" style="margin: 12px;">
-                <label for="size">Enter a Size:</label>
+    <section class="section-1">
+        <div class="game-options" style="margin: 12px;">
+                <label for="size">Canvas resolution</label>
                 <input type="number" id="size" value = 25 min="2" max="100"> 
                 <input type="submit" id="submit" value="Create Canvas">
+                <button id="grid-toggle">
+                    <i></i>
+                    <p>Grid</p>
+                </button>
         </div>
-        <div id="canvas" style="margin: 12px;">
+        <div id="canvas" style="margin: 12px; border: 2px solid black;">
         </div>
     </section>
     <script src="script.js"></script>
