--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <header id="header" style="margin: 12px;">
-        <h1>Etch a Sketch</h1>
+    <header class="glitch-wrapper">
+        <div class="glitch" data-text="Etch A Sketch">Etch A Sketch</div>
     </header>
-    <section class="section-1">
-        <div class="game-options" style="margin: 12px;">
-                <label for="size">Canvas resolution</label>
+    <section>
+        <div class="div">
+            <div class="game-options">
+                <i class="material-symbols-outlined m-space">grid_4x4</i>
+                <i class="material-symbols-outlined m-space">chevron_right</i>
                 <input type="number" id="size" value = 25 min="2" max="100"> 
-                <input type="submit" id="submit" value="Create Canvas">
-                <button id="grid-toggle">
-                    <i></i>
-                    <p>Grid</p>
+                <button type="submit" id="submit" class="material-symbols-outlined">check</button>
+            </div>
+            <div class="grid-on-off">
+                <button id="grid-on">
+                    <i class="material-symbols-outlined">grid_on</i>
                 </button>
+                <button id="grid-off">
+                    <i class="material-symbols-outlined">grid_off</i>
+                </button>
+            </div>
         </div>
-        <div id="canvas" style="margin: 12px; border: 2px solid black;">
+        <div id="canvas">
         </div>
     </section>
     <script src="script.js"></script>
